--- a/package.json
+++ b/package.json
@@ -4,17 +4,25 @@
   "description": "",
   "license": "",
   "scripts": {
-    "build": "remix build",
-    "dev": "remix dev",
+    "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
+    "build:remix": "remix build",
+    "build": "run-s build:*",
+    "dev:remix": "remix dev",
+    "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
+    "dev": "run-p dev:*",
     "postinstall": "remix setup node",
     "start": "remix-serve build"
   },
   "dependencies": {
     "@remix-run/react": "^1.1.3",
+    "@remix-run/serve": "^1.1.3",
+    "autoprefixer": "^10.4.2",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.1.3",
-    "@remix-run/serve": "^1.1.3"
+    "tailwindcss": "^3.0.15"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.1.3",
