--- a/package.json
+++ b/package.json
@@ -11,23 +11,29 @@
     "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
     "dev": "run-p dev:*",
     "postinstall": "remix setup node",
-    "start": "remix-serve build"
+    "start": "remix-serve build",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.3",
+    "@tailwindcss/forms": "^0.4.0",
+    "@types/jest": "^27.4.0",
     "autoprefixer": "^10.4.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.1.3",
-    "tailwindcss": "^3.0.15"
+    "tailwindcss": "^3.0.15",
+    "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.1.3",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "jest": "^27.4.7",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.1.2"
   },
   "engines": {
