--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "remix": "^1.1.3",
     "tailwindcss": "^3.0.15",
     "tiny-invariant": "^1.2.0"
